# liveshark

./: .gitattributes  .gitignore  CLEANUP_GUIDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-CC-BY-4.0  LICENSE-MIT  Makefile  NOTICE  README.md  cleanup.ps1  test_error.txt  test_output.txt
.github/workflows/: audit.yml  build-spec-pdfs.yml  clippy.yml  release.yml
crates/liveshark-cli/: Cargo.toml  build.rs
crates/liveshark-cli/src/: main.rs
crates/liveshark-cli/tests/: cli.rs
crates/liveshark-core/: Cargo.toml
crates/liveshark-core/src/: analysis.rs  lib.rs
crates/liveshark-core/tests/: golden.rs  pcap_source.rs
docs/: GUI_v0.2.0_DEVELOPMENT.md  PHASE_2_TIMELINE_COMPLETE.md  README.md  RELEASE_CHECKLIST_v0.1.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.2.0.md  RUST_ARCHITECTURE.fr.md  RUST_ARCHITECTURE.md  V0.2_SUMMARY.md  VIEWER_QA.md  VIEWER_VALIDATION.md  consumer-contract.md
docs/fr/: README.md  consumer-contract.md
gui/: test-timeline.html
gui/report-viewer/: README.md  app.js  index.html  style.css
scripts/: build_pdf.sh  cleanup.ps1
spec/common/: liveshark-macros.tex  liveshark-style.tex  references.bib
spec/common/figures/: dataflow.tex
spec/en/: LiveShark_Spec.tex  LiveShark_Spec.xdv
spec/fr/: LiveShark_Spec.tex
tests/: CHANGELOG_TESTS.md  README.md
tests/golden/artnet/: expected_report.json  input.pcapng
tests/golden/artnet_burst/: expected_report.json  input.pcapng
tests/golden/artnet_conflict/: expected_report.json  input.pcapng
tests/golden/artnet_gap/: expected_report.json  input.pcapng
(+49 files in other folders)
