[package]
name = "liveshark-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
liveshark-core = { path = "../liveshark-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
