[package]
name = "liveshark-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
liveshark-core = { path = "../liveshark-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
glob = "0.3"

[build-dependencies]
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "liveshark"
path = "src/main.rs"
